--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -29,9 +29,8 @@
                             <thead>
                                 <tr>
                                     <th width="5%">#</th>
-                                    <th>Заказчик</th>
                                     <th width="10%">Статус</th>
-                                    <th>Комментарий</th>
+                                    <th>Заказчик</th>
                                     <th width="10%">Товаров</th>
                                     <th width="15%">Дата добавления</th>
                                     <th width="15%">Доставка</th>
@@ -49,13 +48,10 @@
                                                 ID: {{ item.external_id }}
                                             {% endif %}
                                         </td>
-                                        <td>{{ item.user ? item.user.getName() : item.delivery.client }}</td>
                                         <td>
                                             <span class="badge badge-secondary">{{ item.status }}</span>
                                         </td>
-                                        <td>
-                                            <pre class="mt-2 mb-2">{{ item.comment|truncate(250) }}</pre>
-                                        </td>
+                                        <td>{{ item.user_uuid ? users.firstWhere('uuid', item.user_uuid).getName() : item.delivery.client }}</td>
                                         <td>{{ item.list|length }}</td>
                                         <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i') }}</td>
                                         <td data-order="{{ item.shipping.getTimestamp() }}">{{ item.shipping|df('d.m.Y H:i') }}</td>
