--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -304,8 +304,8 @@
                             <div class="copyright ml-auto">
                                 Copyright &copy; {{ 'now'|df('Y') }} All rights reserved |
                                 Powered by
-                                <a href="https://github.com/0x12f" target="_blank">0x12f</a>
-                                aka <a href="https://alksily.0x12f.com" target="_blank">Aleksey Ilyin</a>
+                                <a href="https://alksily.0x12f.com" target="_blank">Aleksey Ilyin</a>,
+                                <a href="https://github.com/0x12f" target="_blank">0x12f.com</a>
                             </div>
                         </div>
                     </footer>
