--- a/src/Template/cup/sidebar.twig
+++ b/src/Template/cup/sidebar.twig
@@ -4,9 +4,18 @@
     </a>
     <div class="quick-sidebar-wrapper">
         <ul class="nav nav-tabs nav-line nav-color-secondary" role="tablist">
-            <li class="nav-item"><a class="nav-link active show" data-toggle="tab" href="#notif">Уведомления</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#task">Фоновые задачи</a></li>
+            <li class="nav-item">
+                <a class="nav-link active show" data-toggle="tab" href="#notif">
+                    <i class="fa fa-bell" data-toggle="tooltip" data-placement="bottom" title="Уведомления"></i>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#task">
+                    <i class="fas fa-tasks" data-toggle="tooltip" data-placement="bottom" title="Фоновые задачи"></i>
+                </a>
+            </li>
         </ul>
+
         <div class="tab-content mt-3">
 
             {# TAB: Notifications #}
