fix remove files

--- a/src/Template/cup/form/view/detail.twig
+++ b/src/Template/cup/form/view/detail.twig
@@ -41,7 +41,7 @@
                                                 <div class="numbers">
                                                     <p class="card-category">{{ file.getName()|truncate(20) }}</p>
                                                     <p class="card-category">{{ file.type }}</p>
-                                                    <p class="card-category">{{ file.getSize() }}</p>
+                                                    <p class="card-category">{{ file.getFileSize() }}</p>
                                                 </div>
                                             </div>
                                         </div>
