--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -133,7 +133,7 @@
                                         <div class="pt-2">
                                             <div class="row">
                                                 <div class="col-6">
-                                                    <span class="text-small">{{ file.getSize() }}</span>
+                                                    <span class="text-small">{{ file.getFileSize() }}</span>
                                                 </div>
                                                 <div class="col-6 text-right float-right">
                                                     {% include 'cup/form.twig' with {
