--- a/src/Template/cup/system/index.twig
+++ b/src/Template/cup/system/index.twig
@@ -8,7 +8,7 @@
 
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-8">
-                        <form action="/cup/system" method="post" class="mt-3 mb-4">
+                        <form action="/cup/system" method="post" class="mt-3 mb-4" onsubmit="return confirm('Вы уверены?');">
 
                             <p class="text-center">
                                 Создание нового (или обновление текущего) пользователя с правами администратора.
