--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -41,11 +41,10 @@
                                 {% for item in orders %}
                                     <tr>
                                         <td data-order="{{ item.external_id ? item.external_id : item.date.getTimestamp() }}">
-                                            {{ item.serial }}
-
                                             {% if item.external_id %}
-                                                <br>
-                                                ID: {{ item.external_id }}
+                                                {{ item.external_id }} ({{ item.serial }})
+                                            {% else %}
+                                                {{ item.serial }}
                                             {% endif %}
                                         </td>
                                         <td>
