fix count stock

--- a/theme/default/catalog.product.twig
+++ b/theme/default/catalog.product.twig
@@ -68,7 +68,7 @@
                 <div class="col-lg-6 product-details">
                     <h2 class="p-title">{{ product.title }}</h2>
                     <h3 class="p-price">{{ product.price }}</h3>
-                    <h4 class="p-stock">Наличие: {{ product.stock >= 0 ? '<span>На складе</span>' : '<span>Отсутствует</span>' }}</h4>
+                    <h4 class="p-stock">Наличие: {{ product.stock > 0 ? '<span>На складе</span>' : '<span>Отсутствует</span>' }}</h4>
 
                     {# add class item_quantity to quantity input #}
                     <div class="quantity">
