--- a/theme/default/catalog.category.product.twig
+++ b/theme/default/catalog.category.product.twig
@@ -4,7 +4,7 @@
             {#<div class="tag-sale">ON SALE</div>#}
             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}">
                 {% include 'mixin/img.twig' with {
-                    'src': product.getFiles().first().getPublicPath('middle'),
+                    'src': product.hasFiles() ? product.getFiles().first().getPublicPath('middle') : '/assets/img/no_image.png',
                     'title': product.title,
                     'alt': product.title,
                     'style': 'display:block; height: 300px; width: 100%; object-fit: contain; object-position: center center;'
