--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -2,7 +2,7 @@
     <li class="nav-item">
         <a href="/cup">
             <i class="fas fa-home"></i>
-            <p>Доска управления</p>
+            <p>Панель управления</p>
         </a>
     </li>
 
