--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -110,8 +110,8 @@
                                 <div class="page-inner py-5">
                                     <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
                                         <div>
-                                            <h2 class="text-white pb-2 fw-bold">Доска управления</h2>
-                                            <h5 class="text-white op-7 mb-2">Добро пожаловать в панель администратора</h5>
+                                            <h2 class="text-white pb-2 fw-bold">Панель управления</h2>
+                                            <h5 class="text-white op-7 mb-2">Добро пожаловать в панель управления сайтом</h5>
                                         </div>
                                         <div class="ml-md-auto py-2 py-md-0">
                                             {#<a href="#" class="btn btn-white btn-border btn-round mr-2">Manage</a>
