--- a/theme/default/user.profile.twig
+++ b/theme/default/user.profile.twig
@@ -57,9 +57,17 @@
                                     }
                                 } %}
                             </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-12 col-md-6 offset-md-3">
+                            <div class="col-12 col-md-6">
+                                {% include 'mixin/form.twig' with {
+                                    'label': 'Адрес',
+                                    'type': 'textarea',
+                                    'name': 'address',
+                                    'args': {
+                                        'value': user.address
+                                    }
+                                } %}
+                            </div>
+                            <div class="col-12 col-md-6">
                                 {% include 'mixin/form.twig' with {
                                     'label': 'Новый пароль',
                                     'type': 'tel',
