--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -233,7 +233,10 @@
                                                         <table class="table table-properties">
                                                             <tr>
                                                                 <th width="50%">Версия движка:</th>
-                                                                <td width="50%">{{ properties.version }}</td>
+                                                                <td width="50%">
+                                                                    {{ properties.version.branch }}
+                                                                    (<a href="https://github.com/0x12f/platform/tree/{{ properties.version.commit }}" target="_blank">source</a>)
+                                                                </td>
                                                             </tr>
                                                             <tr>
                                                                 <th width="50%">Операционная система:</th>
