--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -115,6 +115,17 @@
                                     }
                                 } %}
                             </div>
+                            <div class="col-md-6">
+                                {% include 'cup/form.twig' with {
+                                    'label': 'Доп. инфо',
+                                    'message': 'Можно указать любую информацию до 250 символов.',
+                                    'type': 'textarea',
+                                    'name': 'additional',
+                                    'args': {
+                                        'value': item.additional,
+                                    }
+                                } %}
+                            </div>
                         </div>
 
                         <hr>
