--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -145,6 +145,16 @@
                                                         </a>
                                                     </div>
                                                     <div class="col-12 col-sm-6 col-lg-4">
+                                                        <a href="/cup/publication" class="card card-stats card-primary card-round">
+                                                            <div class="card-body">
+                                                                <p class="card-category">
+                                                                    <b>Публикации</b><br>
+                                                                    Раздел управления статьями, новостями, записями в личный блог
+                                                                </p>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-12 col-sm-6 col-lg-4">
                                                         <a href="/cup/page" class="card card-stats card-primary card-round">
                                                             <div class="card-body">
                                                                 <p class="card-category">
