--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -26,7 +26,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Получатель',
+                                            'label': 'Клиент',
                                             'type': 'text',
                                             'name': 'delivery[client]',
                                             'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="ФИО клиента"></i>',
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <table data-table class="display table table-striped table-hover">
+                        <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                             <tr>
                                 <th class="no-sorting">Позиция</th>
