--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -25,15 +25,13 @@
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table data-table class="display table table-striped table-hover">
+                        <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                                 <tr>
-                                    <th width="10%">#</th>
+                                    <th width="10%">№ Заказа</th>
+                                    <th>Клиент</th>
                                     <th width="10%">Статус</th>
-                                    <th>Заказчик</th>
-                                    <th width="10%">Товаров</th>
                                     <th width="15%">Дата добавления</th>
-                                    <th width="15%">Доставка</th>
                                     <th width="10%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
@@ -47,13 +45,11 @@
                                                 {{ item.serial }}
                                             {% endif %}
                                         </td>
+                                        <td>{{ item.user_uuid ? users.firstWhere('uuid', item.user_uuid).getName() : item.delivery.client }}</td>
                                         <td>
                                             <span class="badge badge-secondary">{{ item.status }}</span>
                                         </td>
-                                        <td>{{ item.user_uuid ? users.firstWhere('uuid', item.user_uuid).getName() : item.delivery.client }}</td>
-                                        <td>{{ item.list|length }}</td>
                                         <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i') }}</td>
-                                        <td data-order="{{ item.shipping.getTimestamp() }}">{{ item.shipping|df('d.m.Y H:i') }}</td>
                                         <td class="text-center">
                                             <div class="btn-group">
                                                 <div class="btn-group dropdown">
