--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -39,19 +39,16 @@
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table data-table class="display table table-striped table-hover" >
+                        <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                                 <tr>
                                     <th class="d-none">#</th>
-                                    <th width="20%">Наименование</th>
+                                    <th>Наименование</th>
                                     <th width="15%">Категория</th>
-                                    <th>Артикул</th>
-                                    <th>Цена</th>
-                                    <th width="10%">{{ category.product.field_1 ?? 'Поле 1' }}</th>
-                                    <th width="10%">{{ category.product.field_2 ?? 'Поле 2' }}</th>
-                                    <th width="10%">{{ category.product.field_3 ?? 'Поле 3' }}</th>
-                                    {#<th width="8%" class="text-center"><i class="fas fa-boxes" data-toggle="tooltip" data-placement="top" title="Объем упаковки"></i></th>
-                                    <th width="8%" class="text-center"><i class="fas fa-warehouse" data-toggle="tooltip" data-placement="top" title="Количество на складе"></i></th>#}
+                                    <th width="10%">Артикул</th>
+                                    <th width="10%">Цена</th>
+                                    <th width="7%" class="text-center"><i class="fas fa-boxes" data-toggle="tooltip" data-placement="top" title="Количество на складе"></i></th>
+                                    <th width="7%" class="text-center"><i class="fas fa-warehouse" data-toggle="tooltip" data-placement="top" title="Объем упаковки"></i></th>
                                     <th width="10%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
@@ -80,11 +77,8 @@
                                             {% endif %}
                                         </td>
                                         <td>{{ item.price|number_format(2, '.', ' ') }}</td>
-                                        <td>{{ item.field1 }}</td>
-                                        <td>{{ item.field2 }}</td>
-                                        <td>{{ item.field3 }}</td>
-                                        {#<td class="text-center">{{ item.getVolumeWithUnit() }}</td>
-                                        <td class="text-center">{{ item.stock|format_number({fraction_digit: 2}) }}</td>#}
+                                        <td class="text-center">{{ item.getVolumeWithUnit() }}</td>
+                                        <td class="text-center">{{ item.stock|format_number({fraction_digit: 2}) }}</td>
                                         <td class="text-center">
                                             <div class="btn-group dropdown">
                                                 <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
