--- a/src/Template/cup/file/index.twig
+++ b/src/Template/cup/file/index.twig
@@ -22,12 +22,11 @@
 
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table data-table class="display table table-striped table-hover" >
+                        <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                                 <tr>
-                                    <th width="20%">Имя</th>
-                                    <th>Тип</th>
-                                    <th width="15%">Размер</th>
+                                    <th>Имя</th>
+                                    <th width="10%">Размер</th>
                                     <th width="15%">Дата создания</th>
                                     <th width="10%" class="text-center no-sorting"></th>
                                 </tr>
@@ -41,7 +40,6 @@
                                                 <i class="fas fa-external-link-alt"></i>
                                             </a>
                                         </td>
-                                        <td>{{ item.type }}</td>
                                         <td>{{ item.getFileSize() }}</td>
                                         <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i:s') }}</td>
                                         <td class="text-center">
