--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -26,13 +26,12 @@
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table data-table class="display table table-striped table-hover" >
+                        <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                                 <tr>
                                     <th>Название</th>
-                                    <th>Адреса страниц использования</th>
-                                    <th>E-Mail адреса получателей</th>
-                                    <th width="25%">Адрес обработчика формы</th>
+                                    <th width="20%">E-Mail адреса получателей</th>
+                                    <th width="20%">Обработчик формы</th>
                                     <th width="10%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
@@ -49,9 +48,6 @@
                                                     <i class="fas fa-external-link-alt"></i>
                                                 </a>
                                             {% endfor %}
-                                        </td>
-                                        <td>
-                                            {{ item.mailto|join('<br/>')|raw }}
                                         </td>
                                         <td>
                                             {% include 'cup/form.twig' with {
