--- a/src/Template/cup/publication/category/index.twig
+++ b/src/Template/cup/publication/category/index.twig
@@ -25,13 +25,13 @@
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table data-table class="display table table-striped table-hover" >
+                        <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                                 <tr>
                                     <th>Название</th>
-                                    <th width="20%">Основная категория</th>
-                                    <th width="5%">Публичная</th>
-                                    <th width="5%">Показывать вложенные</th>
+                                    <th width="15%">Категория</th>
+                                    <th width="7%">Публичная</th>
+                                    <th width="7%">Вложенные</th>
                                     <th width="10%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
