--- a/src/Template/cup/user/subscriber/index.twig
+++ b/src/Template/cup/user/subscriber/index.twig
@@ -25,7 +25,7 @@
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table data-table class="display table table-striped table-hover">
+                        <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                             <tr>
                                 <th>E-Mail</th>
